<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:paddingHorizontal="8dp"
    android:paddingVertical="4dp">

    <ImageView
        android:id="@+id/img_event"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/foto_event"
        android:src="@drawable/ic_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/title"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/tv_desc"
        app:layout_constraintEnd_toStartOf="@id/btn_bookmark"
        app:layout_constraintStart_toEndOf="@id/img_event"
        app:layout_constraintTop_toTopOf="@id/img_event" />

    <TextView
        android:id="@+id/tv_desc"
        style="@style/TextAppearance.Material3.LabelSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/title_desc"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/img_event"
        app:layout_constraintEnd_toStartOf="@id/btn_bookmark"
        app:layout_constraintStart_toEndOf="@id/img_event"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <ImageButton
        android:id="@+id/btn_bookmark"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/bookmark_button"
        android:src="@drawable/ic_bookmark_outlined"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>