<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    android:background="@drawable/rounded_background"
    android:clipChildren="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_event"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/foto_event"
            android:scaleType="fitXY"
            android:src="@drawable/ic_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="5"
            android:padding="8dp"
            android:text="@string/title"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_event" />

        <ImageButton
            android:id="@+id/btn_bookmark"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/fill_circle_background"
            android:contentDescription="@string/bookmark_button"
            android:elevation="4dp"
            android:padding="4dp"
            android:src="@drawable/ic_bookmark_outlined"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@id/img_event"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_event" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
